2007-05-29  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/valgrind-suppressions:
	Some more suppressions.

2007-05-29  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/*:
	Improved test coverage, and now also running with
	G_SLICE=debug-blocks. It now is able to find eg. bug #438456.

2007-05-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/support/cairo-support.c: (ge_hsb_from_color):
	Assume grey colors if the minimum and maximum are only sligthly
	different.

2007-05-23  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/support/cairo-support.c: (ge_gdk_color_to_cairo),
	(ge_cairo_color_to_gtk):
	Use 65535.0 instead of 65536.0.

2007-05-21  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/torturetest.c:
	Counting is hard ... fixed a bit field.

2007-05-21  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/glide/src/glide_gtk2_drawing.c: (glide_draw_focus):
	Removed the gtk_widget_grab_focus. This fixes tabbing out of a
	GtkComboBoxEntry.

2007-05-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/Makefile.am:
	Forgot to add the clearlooks-gummy rc file to the list.

2007-05-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/smooth/src/engine/smooth_gtk2_misc.c:
	(smooth_gtk_button_get_props):
	* engines/support/widget-information.c: (ge_option_menu_get_props),
	(ge_button_get_default_border):
	Replace g_free with gtk_border_free and gtk_requisition_free where
	appropriate. Bug #438456, based on patch by Carlos Garnacho.

2007-05-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scrollbar_slider):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box_gap), (clearlooks_style_draw_option),
	(clearlooks_style_draw_layout):
	Correct some C89. Bug #438397, patch by Jens Granseuer.

2007-05-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/gtkrcs/clearlooks-gummy:
	Added rc style to torture test Clearlooks' Gummy style.
