@@ -1,3 +1,14 @@
+2007-05-30  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_focus):
+	* engines/support/cairo-support.c:
+	(ge_cairo_set_gdk_color_with_alpha):
+	* engines/support/cairo-support.h:
+	Replace gdk_cairo_set_source_color_alpha with
+	ge_cairo_set_gdk_color_with_alpha so that we do not clutter the gdk_
+	namespace.
+
 2007-05-29  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* test/valgrind-suppressions:
